# ipynb-telemetry

./: .gitignore  CLAUDE.md  docker-compose.yml  notebook_cells.py  pyproject.toml
ipynb_telemetry/: __init__.py  bootstrap.py  notebook_cells.py
src/: bootstrap.py
