[project]
name = "ipynb-telemetry"
version = "1.0.0"
description = "Real-time student progress tracking for Jupyter/Colab notebooks"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Faris Hijazi" }
]
keywords = ["jupyter", "notebook", "telemetry", "posthog", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "posthog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ipynb_telemetry"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
